# rs_apaint

./: .gitignore  .recollections  Cargo.toml  test.json  test_saved_file.json
apaint/: Cargo.toml  README.md
apaint/src/: attributes.rs  basic_paint.rs  characteristics.rs  colour_mix.rs  coloured_shape.rs  drawable.rs  drawing.rs  error.rs  graticule.rs  hue_wheel.rs  legacy.rs  lib.rs  mixtures.rs  properties.rs  series.rs  spec.rs  watercolour.rs  xpm.rs
apaint/src/legacy/: legacy_series.rs
apaint/src/mixtures/: untargeted.rs
apaint/src/watercolour/: series.rs
apaint_boilerplate/: Cargo.toml
apaint_boilerplate/src/: lib.rs
apaint_boilerplate_ng/: Cargo.toml
apaint_boilerplate_ng/src/: lib.rs
apaint_cairo/: Cargo.toml
apaint_cairo/src/: lib.rs
apaint_derive/: Cargo.toml
apaint_derive/src/: lib.rs
apaint_gtk/: Cargo.toml
apaint_gtk/src/: attributes.rs  colour_edit.rs  drawing.rs  factory.rs  graticule.rs  hue_wheel.rs  icon_image.rs  lib.rs  list.rs  mixer.rs  series.rs  spec_edit.rs  storage.rs
apaint_gtk/src/icons/: colln_load.rs  colln_new.rs  colln_save.rs  colln_save_as.rs  mod.rs  needs_save_not_ready.rs  needs_save_ready.rs  paint_standard.rs  paint_standard_load.rs  series_paint.rs  series_paint_load.rs  up_to_date.rs
apaint_gtk/src/mixer/: component.rs  display.rs  palette.rs  targeted.rs
apaint_gtk/src/series/: display.rs
apaint_gtk_boilerplate/: Cargo.toml
apaint_gtk_boilerplate/src/: lib.rs
apaint_gtk_ng/: Cargo.toml
apaint_gtk_ng/src/: factory.rs  icon_image.rs  lib.rs  list.rs  series.rs  spec_edit.rs  storage.rs
apaint_gtk_ng/src/mixer/: component.rs  display.rs  targeted.rs
apaint_gtk_ng/src/series/: display.rs
apaint_ng/: Cargo.toml
apaint_ng/src/: characteristics.rs  colour_mix.rs  legacy.rs  lib.rs  mixtures.rs  series.rs
apaint_ng/src/legacy/: legacy_series.rs
data/art_paint/: atelier-interactive_acrylic.json
data/model_paint/: Humbrol_Enamel-Paints.json  Vallejo-ModelAirColor-rev18-Baja.json  Vallejo-ModelColor-Metallic-rev18-Baja.json  Vallejo-ModelColor-rev18-Baja.json
data/practice/: ideal_paints_ng.json
data/standards/: FederalStandard595C-1XXXX-colorserver.json  bs381c.json
gtk_test_gui/: Cargo.toml
gtk_test_gui/src/: main.rs
gtk_test_gui_ng/: Cargo.toml
gtk_test_gui_ng/src/: main.rs
mcmmtk_gtk/: Cargo.toml
mcmmtk_gtk/src/: config.rs  main.rs  mcmmtk.rs
pcatk_gtk/: Cargo.toml
pcatk_gtk/src/: config.rs  main.rs  pcatk.rs
