[package]
name = "apaint"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
num = "0.2.0"

apaint_boilerplate = { path = "../apaint_boilerplate"}

colour_math = { git = "https://github.com/pwil3058/rs_colour_math.git" }
float_plus = { git = "https://github.com/pwil3058/rs_float_plus.git" }
normalised_angles = { git = "https://github.com/pwil3058/rs_normalised_angles.git" }
