[package]
name = "apaint_boilerplate"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3.1"
quote = "1.0"
syn = "1.0"
