[package]
name = "apaint_boilerplate_ng"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3.1"
syn = "1.0"
quote = "1.0"

colour_math_gtk_ng = { git = "https://github.com/pwil3058/rs_colour_math.git" }
