[package]
name = "apaint_cairo"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.8.0", features =["png"] }

apaint = { path = "../apaint" }

colour_math = { git = "https://github.com/pwil3058/rs_colour_math.git" }
