[package]
name = "apaint_gtk"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"

gcd = "2.0.1"

cairo-rs = "0.8.0"
gdk = "0.12.0"
gdk-pixbuf = "0.8.0"
glib = "0.9.0"
gtk = "0.8.0"

apaint = { path = "../apaint" }

pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
normalised_angles = { git = "https://github.com/pwil3058/rs_normalised_angles.git" }
colour_math = { git = "https://github.com/pwil3058/rs_colour_math.git" }
colour_math_gtk = { git = "https://github.com/pwil3058/rs_colour_math.git" }
num_traits_plus = { git = "https://github.com/pwil3058/rs_num_traits_plus.git" }
pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }
