[package]
name = "apaint_ng"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
gcd = "2.0.1"
lazy_static = "1.4.0"
num-traits = "0.2.14"
regex = "1.3.3"

apaint_boilerplate_ng = { path = "../apaint_boilerplate_ng"}

colour_math_ng = { git = "https://github.com/pwil3058/rs_colour_math.git" }
num_traits_plus = { git = "https://github.com/pwil3058/rs_num_traits_plus.git" }
