[package]
name = "gtk_test_gui"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }

colour_math_ng = { git = "https://github.com/pwil3058/rs_colour_math.git" }
colour_math_derive = { git = "https://github.com/pwil3058/rs_colour_math.git" }

apaint = { path = "../apaint" }
apaint_boilerplate = { path = "../apaint_boilerplate" }
apaint_gtk = { path = "../apaint_gtk" }
